--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,8 @@ twitter_username: none
 github_username:  RobMcA
 
 # Build settings
-theme: minima
+remote_theme: volny/creative-theme-jekyll
+#theme: minima
 plugins:
   - jekyll-feed
 
