Revert "Testing a remote theme"
This reverts commit cff08093f02fcb4d9d3d4f876c20a2f159dbf1f8.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,8 +30,7 @@ twitter_username: none
 github_username:  RobMcA
 
 # Build settings
-remote_theme: volny/creative-theme-jekyll
-#theme: minima
+theme: minima
 plugins:
   - jekyll-feed
 
