--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,15 +19,15 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Toronto Mega Empires Club
-email: infol@torontomegaempires.com
+email: info@torontomegaempires.com
 description: >- # this means to ignore newlines until "baseurl:"
   The Toronto Mega Empires Club is a Toronto group dedicated to promoting
   and playing Mega Empires. You can find out more about this great board game
   at https://www.mega-empires.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.torontomegaempires.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: none
-github_username:  RobMcA
+#twitter_username: none
+github_username:  torontomegaempires
 
 # Build settings
 theme: minima
