--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,12 +27,16 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.torontomegaempires.com" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: none
-github_username:  torontomegaempires
+#github_username:  torontomegaempires
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+minima:
+  social_links:
+    - { platform: facebook,  user_url: "https://www.facebook.com/groups/2344614905731511" }
 
 # Exclude from processing.
 # The following items will not be processed, by default.
