Switch to remote theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,8 @@ url: "https://www.torontomegaempires.com" # the base hostname & protocol for you
 #github_username:  torontomegaempires
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
+#theme: minima
 plugins:
   - jekyll-feed
 
@@ -39,7 +40,7 @@ defaults:
       path: "assets/img"
     values:
       image: true
-      
+
 minima:
   skin: dark
   social_links:
