Added sqlite database

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,9 +31,11 @@ url: "https://www.torontomegaempires.com" # the base hostname & protocol for you
 
 # Build settings
 remote_theme: jekyll/minima
-#theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
+  - jekyll_sqlite # see https://github.com/captn3m0/jekyll-sqlite
+  - jekyll-datapage-generator
 
 defaults:
   - scope:
@@ -50,6 +52,14 @@ minima:
   social_links:
     - { platform: facebook,  user_url: "https://www.facebook.com/groups/2344614905731511" }
 
+sqlite:
+  - data: customers
+    file: "_db/northwind.db"
+    query: SELECT * from Customers
+  - data: players
+    file: _db/megaempires.db
+    query: SELECT * from player
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -59,6 +69,7 @@ minima:
 # their entries' file path in the `include:` list.
 #
 # exclude:
+#   - _db
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
