Updates for game 1

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -54,8 +54,16 @@ minima:
 
 sqlite:
   - data: players
-    file: _db/megaempires.db
+    file: &db "_db/megaempires.db"
     query: SELECT * from player
+  - data: games
+    file: *db
+    query: "select game.name as game, game.date, nation.name as nation, player.display as player, game_player_nation.score from game_player_nation
+join player, game, nation on 
+	game_player_nation.player_id=player.id and 
+	game_player_nation.game_id=game.id AND
+	game_player_nation.nation_id=nation.id
+order by score desc"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
