--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,8 +22,7 @@ title: Toronto Mega Empires
 email: info@torontomegaempires.com
 description: >- # this means to ignore newlines until "baseurl:"
   Toronto Mega Empires is a Toronto group dedicated to promoting
-  and playing Mega Empires. You can find out more about this great board game
-  at https://www.mega-empires.com
+  and playing Mega Empires.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.torontomegaempires.com" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: none
@@ -58,7 +57,7 @@ sqlite:
     query: SELECT * from player
   - data: games
     file: *db
-    query: "select * from game"
+    query: "select * from game order by date(date) desc"
   - data: games.player
     file: *db
     query: "select 
