--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,7 +29,7 @@ url: "https://www.torontomegaempires.com" # the base hostname & protocol for you
 #github_username:  torontomegaempires
 
 # Build settings
-remote_theme: jekyll/minima
+remote_theme: jekyll/minima@c6e74bb
 # theme: minima
 plugins:
   - jekyll-feed
