--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -7,9 +7,11 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "jekyll", "~> 4.3.3"
+gem "jekyll", "~> 4.4.1"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
-gem "minima", "~> 2.5"
+# gem "minima", "~> 2.5"
+# Going to minima 3 with a fixed commit
+gem "minima", github: "jekyll/minima", ref: "1e8a445"
 
 gem "logger"
 gem "csv"
@@ -19,9 +21,14 @@ gem "base64"
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
 # gem "github-pages", group: :jekyll_plugins
+
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.12"
+  gem "jekyll-archives"
+  gem "jekyll-sitemap"
+  gem "jekyll-seo-tag"
+  gem "jekyll-paginate"
+  gem "jekyll-feed", "~> 0.17"
   gem "jekyll-sqlite", "~> 0.1.5"
   gem "jekyll-datapage-generator", "~> 1.4"
   gem "jekyll-remote-theme"
