Revert "Fix the minima version due to upcoming breaking changes to main."
This reverts commit 51f10832fc1d1db15f8c03703c82a95781dd0b2a.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,7 +29,7 @@ url: "https://www.torontomegaempires.com" # the base hostname & protocol for you
 #github_username:  torontomegaempires
 
 # Build settings
-remote_theme: jekyll/minima@c6e74bb
+remote_theme: jekyll/minima
 # theme: minima
 plugins:
   - jekyll-feed
