--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -9,7 +9,8 @@ source "https://rubygems.org"
 # Happy Jekylling!
 gem "jekyll", "~> 4.3.3"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
-gem "minima", "~> 2.5"
+# gem "minima", "~> 2.5"
+gem "jekyll-theme-yat"
 
 gem "logger"
 gem "csv"
