Removed YAT theme default banner and header

--- a/docs/_data/defaults.yml
+++ b/docs/_data/defaults.yml
@@ -1,4 +1,1 @@
-home:
-  heading: "Toronto Mega Empires"
-  subheading: ""
-  banner: /assets/images/banners/mega-empires-banner.png
+# Empty defaults file - no banner configuration
