Refactor banner configuration and update hero section styling
- Remove banner hiding CSS and add null banner config in _config.yml
- Delete unused defaults.yml file
- Add custom home layout with banner configuration
- Update hero background image to board-closeup.png
- Simplify hero subtitle text and remove game types section

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -157,6 +157,10 @@ brand_color: greenblue
 #     subheading: "Your awesome subheading"
 #     banner: "Your image url"
 
+# setting image to null disables the banner
+banner:
+  image: null
+
 # Banner default settings
 # These banner settings are for global banner default, but you can also
 # config it by the front matter for one specific post
