--- a/megaempires-admin/package.json
+++ b/megaempires-admin/package.json
@@ -18,13 +18,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.2.1",
-    "sqlite3": "^5.1.7",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "ejs": "^3.1.10",
+    "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "multer": "^2.0.2",
-    "csv-parser": "^3.2.0",
-    "csv-writer": "^1.6.0"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
