Update styles, layout config, and clean up data
Add CSS classes for signup section and stretched-link pattern (replacing
inline styles and onclick handlers). Replace placeholder heading/subheading
in home layout. Remove dummy Jekyll contributor data from members.yml.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/docs/_data/members.yml
+++ b/docs/_data/members.yml
@@ -1,9 +1,3 @@
-- name: Eric Mill
-  github: konklone
-
-- name: Parker Moore
-  github: parkr
-
-- name: Liu Fengyun
-  github: liufengyun
-  
+# Community members data
+# Currently unused - player data is managed via SQLite database (_db/megaempires.db)
+# and accessed through the jekyll-sqlite plugin (see _config.yml)
